--- a/src/components/tile/tile.css
+++ b/src/components/tile/tile.css
@@ -1,14 +1,20 @@
 .tile {
-    height: 3rem;
-    width: 3rem;
+    height: var(--space-l-xl);
+    width: var(--space-l-xl);
+    font-family: var(--font-base);
+    font-size: var(--size-step-1);
+    color: var(--color-black);
     padding: 0.5rem;
     border-radius: 0.5rem;
-    font-size: 1.5rem;
     font-weight: 700;
-    display: flex;
-    align-items: center;
+    display: inline-flex;
     justify-content: center;
-    text-transform: uppercase;
+    align-items: center;
+    vertical-align: middle;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 }
 
 .tile.bg-white {
